// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
  output   = "../../../node_modules/.db/general/generated"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("GENERAL_DATABASE_URL")
}

model TradingService {
  id   Int    @id @default(autoincrement())
  name String @db.VarChar(120)

  pairs Pair[]

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([name])
  @@map("trading_services")
}

model Pair {
  id        Int     @id @default(autoincrement())
  name      String  @db.VarChar(50)
  symbol    String  @db.VarChar(50)
  precision Int     @default(2)
  startTs   BigInt  @default(0) @map("start_ts")
  currentTs BigInt  @default(0) @map("current_ts")
  activated Boolean @default(true)

  orders                  Order[]
  strategySessions        StrategySession[]
  historyStrategySessions HistoryStrategySession[]

  tradingServiceId Int            @map("trading_service_id")
  tradingService   TradingService @relation(fields: [tradingServiceId], references: [id], onDelete: Restrict)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([name, tradingServiceId])
  @@unique([symbol, tradingServiceId])
  @@map("pairs")
}

model Order {
  id            String  @id @unique @default(uuid())
  status        String?
  orderType     String? @map("order_type")
  stopOrderType String? @map("stop_order_type")
  side          String  @default("buy")
  data          Json    @default("{}")

  pairId Int  @map("pair_id")
  pair   Pair @relation(fields: [pairId], references: [id], onDelete: Restrict)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("orders")
}

model Balance {
  id     Int    @id @default(autoincrement())
  symbol String @db.VarChar(50)
  value  String @default("0") @db.VarChar(50)

  trxs BalanceTrx[]

  createdAt DateTime @default(now()) @map("created_at")

  @@unique([symbol])
  @@map("balances")
}

model BalanceTrx {
  id            Int    @id @default(autoincrement())
  balanceBefore String @default("0") @map("balance_before") @db.VarChar(50)
  balanceAfter  String @default("0") @map("balance_after") @db.VarChar(50)
  status        String @default("pending")
  side          String
  type          String
  quantity      String @db.VarChar(50)
  price         String @db.VarChar(50)

  balanceId Int     @map("balance_id")
  balance   Balance @relation(fields: [balanceId], references: [id], onDelete: Restrict)

  createdAt DateTime @default(now()) @map("created_at")

  @@unique([balanceId])
  @@map("balance_trxs")
}

model Strategy {
  id   Int    @id @default(autoincrement())
  name String @db.VarChar(100)

  createdAt DateTime @default(now()) @map("created_at")

  @@unique([name])
  @@map("strategies")
}

model StrategySession {
  id         Int       @id @default(autoincrement())
  status     String    @default("waiting")
  data       Json      @default("{}")
  type       String    @default("dhm")
  direction  String    @default("up")
  notifiedAt DateTime? @map("notified_at")
  confirmed  Boolean   @default(false)

  pairId Int  @map("pair_id")
  pair   Pair @relation(fields: [pairId], references: [id], onDelete: Restrict)

  trxs StrategySessionTrx[]

  startTs   BigInt   @map("start_ts")
  finishTs  BigInt?  @map("finish_ts")
  createdAt DateTime @default(now()) @map("created_at")

  @@index([pairId])
  @@map("strategy_sessions")
}

model HistoryStrategySession {
  id     Int    @id @default(autoincrement())
  status String @default("waiting")
  data   Json   @default("{}")

  pairId Int  @map("pair_id")
  pair   Pair @relation(fields: [pairId], references: [id], onDelete: Restrict)

  trxs StrategySessionTrx[]

  startTs   BigInt   @map("start_ts")
  finishTs  BigInt?  @map("finish_ts")
  createdAt DateTime @default(now()) @map("created_at")

  @@map("history_strategy_sessions")
}

model StrategySessionTrx {
  id       Int    @id @default(autoincrement())
  status   String @default("pending")
  value    String @db.VarChar(50)
  side     String
  type     String
  quantity String @db.VarChar(50)
  price    String @db.VarChar(50)

  strategySessionId Int             @map("strategy_session_id")
  strategySession   StrategySession @relation(fields: [strategySessionId], references: [id], onDelete: Restrict)

  createdAt                DateTime                @default(now()) @map("created_at")
  HistoryStrategySession   HistoryStrategySession? @relation(fields: [historyStrategySessionId], references: [id])
  historyStrategySessionId Int?

  @@map("strategy_session_trxs")
}
